# PaidOutIncurred

./: .gitignore  pyproject.toml
paidoutsincurred/: entry.py
tests/: test_entry.py
